actualizar mini proyecto

--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-
-  <title>Mini Proyecto</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet-->
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <title>Mini Proyecto</title>
+  </head>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./styles/styles.css">
+    <script src="./script/main.js" defer></script>
   <style>
     .attribution {
       font-size: 11px;
@@ -23,68 +22,75 @@
   </style>
 </head>
 
-<body class="bg-black">
-
-  <!-- Sign-up form start -->
-  <div class="container-fluid d-flex h-50 w-50">
-    <div class="col aline-items-center">
-      <div>
-        <var class="col-lg-6">
-          <h2> Stay updated!</h2>
-
-      </div>
-      <div>
-        <h5> Join 60,000+ product managers receiving monthly updates on:</h5>
-
-      </div>
-      <div>
-        <li>Product discovery and building what matters</li>
-        <li> Measuring to ensure updates are a success</li>
-        <li> And much more!</li>
-
-      </div>
-      <div>
-        <a>Email address</a>
-        <div>
-        <input type="email@company.com">
-      </div>
-
-      </div>
-      <div>
-        <button>Subscribe to monthly newsletter</button>
-      </div>
-      </var>
-      <var class="col-lg-6">
-        <img src="./assets/images/illustration-sign-up-desktop.svg" alt="">
-      </var>
+<body class="p-0">
+  <div class="container-fluid d-flex flex-column justify-content-center p-0">
+    <div class="">
+      <img src="./assets/images/illustration-sign-up-mobile.svg" alt="" class="img w-100">
     </div>
-  </div>
 
+    <div class="texto flex-column justify-content-center">
+      <h1 class="titulo m-4 Bold text">Stay updated!</h1>
+      <p class="m-3">Join 60,000+ product managers receiving monthly updates on:</p>
+      <div class="col">
+      <ul class="ul d-flex align-content-start margin-rigth m-4 justify-content-start ">
+        <img src="./assets/images/icon-list.svg" alt="" class="img2 m-0">
+        <li>Product discovery and building what matters</li>
+      </ul>
+      <ul class="ul d-flex align-content-start m-4 justify-content-start ">
+        <img src="./assets/images/icon-list.svg" alt="" class="img2 m-0">
+        <li> Measuring to ensure updates are a success</li>
+      </ul>
+      <ul class="ul d-flex align-content-start m-4 justify-content-start ">
+        <img src="./assets/images/icon-list.svg" alt="" class="img2 m-0">
+        <li> And much more!</li>  
+      </ul>     
+      
+    </div>
 
-
-
-
-
-
-
-
-  <!-- Sign-up form end -->
-
-  <!-- Success message start -->
-
-  Thanks for subscribing!
-
-  A confirmation email has been sent to ash@loremcompany.com.
-  Please open it and click the button inside to confirm your subscription.
-
-  Dismiss message
-
-  <!-- Success message end -->
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
+      <div class="final align-content-center">
+        <a>Email address</a>
+        <input type="email@company.com">
+        <button class="badge btn-dark">Subscribe to monthly newsletter</button>
+      </div>
+    </div>
   </div>
 </body>
 
+<!-- Sign-up form start -->
+
+
+<!-- Sign-up form end -->
+
+<!-- Success message start -->
+
+<!--Thanks for subscribing!
+
+A confirmation email has been sent to ash@loremcompany.com.
+Please open it and click the button inside to confirm your subscription.
+
+Dismiss message
+
+<!-- Success message end -->
+
+<!--<div class="attribution">
+  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+  Coded by <a href="#">Your Name Here</a>.
+</div>
+</body>
+
 </html>git
+
+
+
+
+
+
+<div class="col-lg-6">
+<img src="./assets/images/illustration-sign-up-desktop.svg" alt="">
+</div>-->
+
+</html>
+
+
+
+
