actualizar mini proyecto

--- a/index.html
+++ b/index.html
@@ -23,34 +23,34 @@
 </head>
 
 <body class="p-0">
-  <div class="container-fluid d-flex flex-column justify-content-center p-0">
+  <div class="container-sm d-flex flex-column justify-content-center p-0">
     <div class="">
       <img src="./assets/images/illustration-sign-up-mobile.svg" alt="" class="img w-100">
     </div>
 
     <div class="texto flex-column justify-content-center">
-      <h1 class="titulo m-4 Bold text">Stay updated!</h1>
+      <h1 class="titulo m-4 fs-1 fw-bolder">Stay updated!</h1>
       <p class="m-3">Join 60,000+ product managers receiving monthly updates on:</p>
       <div class="col">
-      <ul class="ul d-flex align-content-start margin-rigth m-4 justify-content-start ">
-        <img src="./assets/images/icon-list.svg" alt="" class="img2 m-0">
+      <ul class="ul gap-3 d-flex align-content-start ms-0 me-2  justify-content-start ">
+        <img src="./assets/images/icon-list.svg" alt="" class="img2">
         <li>Product discovery and building what matters</li>
       </ul>
-      <ul class="ul d-flex align-content-start m-4 justify-content-start ">
-        <img src="./assets/images/icon-list.svg" alt="" class="img2 m-0">
+      <ul class="ul gap-3 d-flex align-content-start ms-0 me-2 justify-content-start ">
+        <img src="./assets/images/icon-list.svg" alt="" class="img2">
         <li> Measuring to ensure updates are a success</li>
       </ul>
-      <ul class="ul d-flex align-content-start m-4 justify-content-start ">
-        <img src="./assets/images/icon-list.svg" alt="" class="img2 m-0">
+      <ul class="ul gap-3 d-flex align-content-start ms-0 me-2 justify-content-start ">
+        <img src="./assets/images/icon-list.svg" alt="" class="img2 ms-0 m">
         <li> And much more!</li>  
       </ul>     
       
     </div>
 
       <div class="final align-content-center">
-        <a>Email address</a>
-        <input type="email@company.com">
-        <button class="badge btn-dark">Subscribe to monthly newsletter</button>
+        <a class="email fw-bolder ">Email address</a>
+        <input class="display p-2 me-4 input-group-text" placeholder="email@company.com" type="email@company.com">
+        <button class="badge btn-dark ms-2">Subscribe to monthly newsletter</button>
       </div>
     </div>
   </div>
